// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTokensCss > generates correct CSS for a standard surface group 1`] = `
"@property --surface-token {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}
@property --text-token {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}
@property --border-dec-token {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}
@property --border-int-token {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}

/* AUTO-GENERATED by src/lib/generator.ts */
.surface-page {
  --surface-token: light-dark(
    oklch(0.98 0 179.7869),
    oklch(0.1 0 5.04)
  );
  --text-token: light-dark(
    oklab(0 0.4184 0.5085),
    oklab(1 0.893 0.8406)
  );
  --border-dec-token: light-dark(
    oklch(0 0 0 / 0.0515),
    oklch(0.9866 0 0 / 0.2911)
  );
  --border-int-token: light-dark(
    oklch(0 0 0 / 0.0515),
    oklch(0.9866 0 0 / 0.2911)
  );
}
.surface-page:hover {
  --surface-token: light-dark(
    oklch(0.95 0 178.695),
    oklch(0.15 0 10.935)
  );
}

.surface-card {
  --surface-token: light-dark(
    oklch(1 0 180),
    oklch(0.2 0 18.72)
  );
  --text-token: light-dark(
    oklab(0 0.4586 0.54),
    oklab(1 0.896 0.8468)
  );
  --border-dec-token: light-dark(
    oklch(0.1935 0 0 / 0.0612),
    oklch(0.9926 0 0 / 0.214)
  );
  --border-int-token: light-dark(
    oklch(0.1935 0 0 / 0.0612),
    oklch(0.9926 0 0 / 0.214)
  );
}
"
`;

exports[`generateTokensCss > handles missing background values gracefully 1`] = `
"@property --surface-token {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}
@property --text-token {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}
@property --border-dec-token {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}
@property --border-int-token {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}

/* AUTO-GENERATED by src/lib/generator.ts */
.surface-unknown {
  --surface-token: light-dark(
    oklch(0 0 0),
    oklch(0 0 0)
  );
  --text-token: light-dark(
    oklab(1 0.893 0.8406),
    oklab(1 0.893 0.8406)
  );
}
"
`;
